updated swagger for import tasks, added them to pub/sub proxies
