# api/index.ts
@@ -1,3 +1,0 @@
-export * from './shared';
-export * from './candle';
-export * from './instrument';
