# api/instrument/controllers/instrument.controller.js
@@ -13,12 +13,12 @@ function getInstruments(req, res, next) {
     return __awaiter(this, void 0, void 0, function* () {
         try {
             let result = [];
-            let _id;
-            if (req.swagger.params && req.swagger.params._id) {
-                _id = req.swagger.params._id.value;
+            let title;
+            if (req.swagger.params && req.swagger.params.title) {
+                title = req.swagger.params.title.value;
             }
-            let service = new api.InstrumentService();
-            let data = yield service.get(_id);
+            let service = new api.services.InstrumentService();
+            let data = yield service.get(title);
             res.json(data);
         }
         catch (err) {
@@ -28,19 +28,5 @@ function getInstruments(req, res, next) {
     });
 }
 exports.getInstruments = getInstruments;
-function importInstruments(req, res, next) {
-    return __awaiter(this, void 0, void 0, function* () {
-        try {
-            let service = new api.InstrumentService();
-            yield service.sync();
-            res.status(200).send({ message: 'imported successfully' });
-        }
-        catch (err) {
-            res.statusCode = 500; // bad server
-            next(err);
-        }
-    });
-}
-exports.importInstruments = importInstruments;
 
 //# sourceMappingURL=instrument.controller.js.map
